# kindle-to-text

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: overview.md
docs/plans/: 01_screenshot.md  02_crop.md  03_ocr.md  03_ocr_impl.md  03_ocr_tech.md  04_merge.md
src/kindle_crop/: __init__.py  cli.py  config.py  crop.py
src/kindle_ocr/: __init__.py  __main__.py  cli.py  config.py  ocr.py
src/kindle_screenshot/: __init__.py  __main__.py  capture.py  cli.py  config.py  window.py
