[project]
name = "kindle-to-text"
version = "0.1.0"
description = "Kindle書籍コンテンツをテキストに変換するツール"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
    "pygetwindow>=0.0.9",
    "google-genai>=1.57.0",
]

[project.scripts]
kindle-screenshot = "kindle_screenshot.cli:main"
kindle-crop = "kindle_crop.cli:main"
kindle-ocr = "kindle_ocr.cli:main"

[tool.uv]
package = true

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kindle_screenshot", "src/kindle_crop", "src/kindle_ocr"]
